--- a/nodejs-wasi/wasmer-js-browser/package.json
+++ b/nodejs-wasi/wasmer-js-browser/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@wasmer/wasi": "^0.12.0",
+    "@wasmer/wasm-terminal": "^0.12.0",
+    "@wasmer/wasm-transformer": "^0.12.0",
     "@wasmer/wasmfs": "^0.12.0"
   },
   "browserslist": [
