WASI plus go imports ... seems to work a little bit

--- a/go-wasm-with-import/Makefile
+++ b/go-wasm-with-import/Makefile
@@ -1,6 +1,8 @@
+main-wasi.wasm:
+	GOOS=wasi GOARCH=wasm go build -o main-wasi.wasm
+
 main.wasm:
 	GOOS=js GOARCH=wasm go build -o main.wasm
 
 clean:
 	rm -f *.wasm
-
