--- a/go-wasm-with-import/Makefile
+++ b/go-wasm-with-import/Makefile
@@ -1,6 +1,6 @@
 main-wasi.wasm:
 	#GOOS=wasi GOARCH=wasm go build -v -x -work -o main-wasi.wasm
-	GOOS=wasi GOARCH=wasm go build -v -x -o main-wasi.wasm
+	GOOS=wasi GOARCH=wasm go build -o main-wasi.wasm
 
 main.wasm:
 	GOOS=js GOARCH=wasm go build -o main.wasm
