--- a/wasmer-js-browser/package.json
+++ b/wasmer-js-browser/package.json
@@ -15,6 +15,8 @@
     "parcel-plugin-static-files-copy": "^2.6.0"
   },
   "dependencies": {
+    "@filecoin-shipyard/lotus-client-rpc": "^0.2.0",
+    "@filecoin-shipyard/lotus-client-schema": "^3.0.0",
     "@jimpick/wasm-terminal": "file:../../wasmer-js-go-hack/packages/wasm-terminal",
     "@wasmer/wasi": "^0.12.0",
     "@wasmer/wasm-transformer": "^0.12.0",
